Style: Stop big editor thumbnail overflowing modal

--- a/src/pytch.scss
+++ b/src/pytch.scss
@@ -271,6 +271,7 @@ button.awaiting-action {
       margin-top: 1rem;
       text-align: center;
       img {
+        max-width: 80%;
         box-shadow: 0px 0px 6px 4px $box-shadow-color;
       }
     }
